--- a/app/components/styles/topnavbar.css
+++ b/app/components/styles/topnavbar.css
@@ -78,7 +78,7 @@
 }
 
 .experimentTitleGridColumn {
-  white-space: nowrap;
+  /* white-space: nowrap; */
   display: flex !important;
   justify-content: center;
   height: inherit;
@@ -90,18 +90,10 @@
   border-width: 0px;
   border-bottom-width: 4px;
   border-bottom-color: #ffc107;
-}
-
-.experimentTitleSegment {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  align-items: center;
-  justify-content: center;
-  grid-column-gap: 10px;
+  width: inherit;
 }
 
 .exitWorkspaceBtn{
-  display: grid;
   font-family: Gothic A1 !important;
   font-style: normal !important;
   font-weight: 900 !important;
@@ -111,13 +103,4 @@
   border: none !important;
   height: 35px;
   min-width: 35px;
-  margin-left: 10px !important;
-}
-
-.homeTopNavButton{
-  display:grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  grid-column-gap: 5px;
-  margin-right: 20px;
 }
