--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -359,6 +359,10 @@
   display: grid;
   grid-template-columns: auto auto 1fr;
   grid-column-gap: 10px;
+  border: 2px solid #CCCCCC;
+  padding: inherit;
+  border-radius: 4px;
+  width: fit-content;
 }
 
 .trialsTopInfoBar{
