--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -75,6 +75,8 @@
 .closeButton {
   border: none !important;
   box-shadow: none !important;
+  display: grid;
+  justify-content: end;
 }
 
 .previewWindow {
@@ -106,12 +108,16 @@
   height: 100%;
 }
 
-.helpSidebar {
-  height: inherit;
+.helpButton {
+  height: 44px !important;
+  width: 44px !important;
+  color: #fff !important;
+  background-color: #007c70 !important;
+  border-radius: 22px !important;
 }
 
-.helpSidebar i {
-  color: #64c9e2;
+.helpSidebar {
+  height: inherit;
 }
 
 .helpHeader {
@@ -126,18 +132,6 @@
 .helpContent {
   font-size: 18px !important;
   height: 80%;
-}
-
-.helpButton {
-  height: 44px !important;
-  width: 44px !important;
-  color: #fff !important;
-  background-color: #007c70 !important;
-  border-radius: 22px !important;
-  border: 2px solid #007c70 !important;
-  display: flex;
-  justify-content: flex-end;
-  font-size: initial !important;
 }
 
 .externalLinks {
@@ -368,7 +362,7 @@
   display: grid;
   grid-template-columns: auto auto 1fr;
   grid-column-gap: 10px;
-  border: 2px solid #CCCCCC;
+  border: 2px solid #cccccc;
   padding: inherit;
   border-radius: 4px;
   width: fit-content;
