--- a/app/components/styles/topnavbar.css
+++ b/app/components/styles/topnavbar.css
@@ -99,13 +99,13 @@
   margin-left: 20px !important;
 }
 
-.exitWorkspaceBtn{
+.exitWorkspaceBtn {
   font-family: Gothic A1 !important;
   font-style: normal !important;
   font-weight: 900 !important;
   font-size: 24px !important;
   line-height: 30px !important;
-  color: #007C70 !important;
+  color: #007c70 !important;
   border: none !important;
   height: 30px;
   min-width: 30px;
