--- a/app/app.global.css
+++ b/app/app.global.css
@@ -2,7 +2,6 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
-@import '~font-awesome/css/font-awesome.css';
 @import '~semantic-ui-css/semantic.min.css';
 @import '~rc-slider/assets/index.css';
 @import '~react-toastify/dist/ReactToastify.css';
@@ -222,11 +221,11 @@ button:active {
 /* rc-slider-related styles */
 
 .rc-slider-rail {
-  background-color: #cccccc !important;
+  background-color: #ccc !important;
 }
 
 .rc-slider-track {
-  background-color: #cccccc !important;
+  background-color: #ccc !important;
 }
 
 .rc-slider-dot {
